# oscpp

./: CMakeLists.txt
.github/workflows/: main.yml
include/oscpp/: client.hpp  server.hpp
include/oscpp/detail/: host.hpp  stream.hpp
test/: CMakeLists.txt
